bk_ida/gccida/c1/pre_delete
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pre_delete/src/gcse.c:5452:34: error: use of undeclared identifier 'machine_mode'
i->reaching_reg = gen_reg_rtx( ( machine_mode)*( unsigned __int8 *)( v5->fld[0].rtwint + 2)); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pre_delete/src/gcse.c:5456:26: error: use of undeclared identifier 'uid_cuid_1'
v6 = *( ( unsigned int *)uid_cuid_1 + *( ( int *)insn + 2)); 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pre_delete/src/obj/gcse.o] Error 1
